--- a/docs/happy/0126.md
+++ b/docs/happy/0126.md
@@ -1,13 +1,11 @@
-# 0126-公司
-rr
+# 1月份
+## 0126-公司-狼人杀
+找好心态，预言家拿的多也要好好发言，给别人的感受很重要。有的人很有特色和优点。  
+<img src="http://pm3f1j9zs.bkt.clouddn.com/20190127lrswxq.png" width="110" height="150"/>
+<img src="http://pm3f1j9zs.bkt.clouddn.com/20190127lrspyq.png" width="110" height="150"/>
 
-<!-- ![avatar](../.vuepress/public/images/happy/01/lrspyq.png) -->
-
-<!-- ![avatar](~@alias/images/happy/01/lrspyq.png) -->
-
-
-
-<!-- ![avatar](../.vuepress/public/images/lrspyq.png)
-
-![Image from alias](~alia/images/lrspyq.png) -->
+## 0127-万达-跳舞机
+年末总结会，记得以后要请吃饭哦。
+跳舞机这个东西，还是得人少有人陪着才敢去。  
+<img src="http://pm3f1j9zs.bkt.clouddn.com/20190127twj.jpg" width="110" height="150"/>
 
